(feat) refactors to use table for gameboard

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>Monopoly</title>
 
-    <style rel="stylesheet" href="app.css"></style>
-
+    <link rel="stylesheet" href="app.css"></link>
   </head>
   <body>
     <div class="navbar">
@@ -13,6 +12,15 @@
       <div class="nav2"></div>
       <div class="nav3"></div>
     </div>
-    <div class="body"></div>
+    <div class="body">
+      <table class="gameboard">
+        
+      </table>
+    </div>
+
+    <script src="app.js"></script>
+    <script src="app.controllers.js"></script>
+    <script src="app.services.js"></script>
+
   </body>
 </html>
